--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,7 @@ h1 {
 .square {
     height: 100px;
     width: calc(100% / 7 - 10px );
-    margin-right: 10px;
-    margin-bottom: 10px;
+    margin: 0 5px 10px 5px;
     background-color: #1389B2;
     display: flex;
     justify-content: center;
